docs: add more info in the api contract
